Add setup scripts for installing dependencies during first load

--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "reviews of devconnector-try1",
   "main": "server.js",
   "scripts": {
+    "setup1": "npm install concurrently",
+    "setup2": "concurrently \"npm install\" \"npm install --prefix client\"",
     "start": "npm run server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -28,7 +32,7 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "concurrently": "^5.0.0",
+    "concurrently": "^5.0.2",
     "nodemon": "^1.19.4"
   }
 }
